--- a/infra/docker/php/Dockerfile
+++ b/infra/docker/php/Dockerfile
@@ -23,7 +23,12 @@ RUN apt-get update && \
   mkdir /var/run/php-fpm && \
   docker-php-ext-install intl pdo_mysql zip bcmath && \
   composer config -g process-timeout 3600 && \
-  composer config -g repos.packagist composer https://packagist.org
+  composer config -g repos.packagist composer https://packagist.org &&\
+  apt update &&\
+  apt install -y nodejs npm &&\
+  npm install -g n &&\
+  n stable &&\
+  apt purge -y nodejs npm
 
 COPY ./infra/docker/php/php-fpm.d/zzz-www.conf /usr/local/etc/php-fpm.d/zzz-www.conf
 COPY ./infra/docker/php/php.ini /usr/local/etc/php/php.ini
