--- a/infra/docker/php/Dockerfile
+++ b/infra/docker/php/Dockerfile
@@ -14,7 +14,12 @@ ENV TZ=UTC \
 
 COPY --from=composer:2.0 /usr/bin/composer /usr/bin/composer
 
-RUN apt-get update && \
+RUN apt update &&\
+  apt install -y nodejs npm &&\
+  npm install -g n &&\
+  n stable &&\
+  apt purge -y nodejs npm &&\
+  apt-get update && \
   apt-get -y install git libicu-dev libonig-dev libzip-dev unzip locales && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* && \
@@ -23,12 +28,7 @@ RUN apt-get update && \
   mkdir /var/run/php-fpm && \
   docker-php-ext-install intl pdo_mysql zip bcmath && \
   composer config -g process-timeout 3600 && \
-  composer config -g repos.packagist composer https://packagist.org &&\
-  apt update &&\
-  apt install -y nodejs npm &&\
-  npm install -g n &&\
-  n stable &&\
-  apt purge -y nodejs npm
+  composer config -g repos.packagist composer https://packagist.org
 
 COPY ./infra/docker/php/php-fpm.d/zzz-www.conf /usr/local/etc/php-fpm.d/zzz-www.conf
 COPY ./infra/docker/php/php.ini /usr/local/etc/php/php.ini
